--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   	</div>
 </div> 
 	<article class="alll">
-		<h1 id="padsections">Why us?</h1>
+		<h1 id="padcontents">Why us?</h1>
 			<article class="main-content">
 				<section class="main1">
 					<h2 id="left">Desktop App & Anti-Cheat</h2>
